# kwin-mcp

./: .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
src/kwin_mcp/: __init__.py  __main__.py  accessibility.py  core.py  input.py  screenshot.py  server.py  session.py
