[project]
name = "kwin-mcp"
version = "0.1.0"
description = "MCP server for GUI automation on KDE Plasma 6 Wayland via isolated kwin_wayland --virtual sessions"
readme = "README.md"
authors = [{ name = "Byeonghoon Yoo", email = "bhyoo@bhyoo.com" }]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "PyGObject>=3.42.0",
    "dbus-python>=1.3.2",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.11.0", "ty>=0.0.1"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["kwin_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"
