[project]
name = "kwin-mcp"
version = "0.2.0"
description = "MCP server for Linux desktop GUI automation on KDE Plasma 6 Wayland via isolated KWin virtual sessions"
readme = "README.md"
license = "MIT"
authors = [{ name = "Byeonghoon Yoo", email = "bhyoo@bhyoo.com" }]
requires-python = ">=3.12"
keywords = ["mcp", "kwin", "kde", "wayland", "gui-automation", "plasma", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0.0",
    "PyGObject>=3.42.0",
    "dbus-python>=1.3.2",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/isac322/kwin-mcp"
Repository = "https://github.com/isac322/kwin-mcp"
Issues = "https://github.com/isac322/kwin-mcp/issues"
Changelog = "https://github.com/isac322/kwin-mcp/blob/main/CHANGELOG.md"

[project.scripts]
kwin-mcp = "kwin_mcp.server:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.11.0", "ty>=0.0.1"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["kwin_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

# gi.repository and dbus.bus are dynamic modules that cannot be resolved statically
[[tool.ty.overrides]]
include = ["src/kwin_mcp/accessibility.py", "src/kwin_mcp/server.py"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["src/kwin_mcp/input.py"]
[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"
